--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
     />
     <meta property="twitter:image" content="https://Sentertainmentdashboard.io/og-image/og-twitter.png" />
     <meta name="twitter:creator" content="@codedthemes" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
